--- a/index.html
+++ b/index.html
@@ -3,29 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <title>Dogs</title>
-    <link rel="stylesheet" href="grid-queries.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
-      <nav>
-        <ul>
-          <li>
-            <a href="/">Home</a>
+      <nav class="main-nav">
+        <ul class="main-nav__list">
+          <li class="main-nav__list-item">
+            <a href="/" class="main-nav__list-item-link">Home</a>
           </li>
-          <li>
-            <a href="/about-us">About Us</a>
+          <li class="main-nav__list-item">
+            <a href="/about-us" class="main-nav__list-item-link">About Us</a>
           </li>
-          <li>
-            <a href="/contact">Contact</a>
+          <li class="main-nav__list-item">
+            <a href="/contact" class="main-nav__list-item-link">Contact</a>
           </li>
-          <li>
-            <a href="/breed-list">List of dogs</a>
+          <li class="main-nav__list-item">
+            <a href="/breed-list" class="main-nav__list-item-link"
+              >List of dogs</a
+            >
           </li>
-          <li>
-            <a href="/quiz">Dog quiz</a>
+          <li class="main-nav__list-item">
+            <a href="/quiz" class="main-nav__list-item-link">Dog quiz</a>
           </li>
-          <li>
-            <a href="/dog-of-day">Dog of the day</a>
+          <li class="main-nav__list-item">
+            <a href="/dog-of-day" class="main-nav__list-item-link"
+              >Dog of the day</a
+            >
           </li>
         </ul>
       </nav>
@@ -33,9 +37,9 @@
     <main>
       <article>
         <h1>Labrador Retrievers</h1>
-        <section>
-          <h2>Introduction</h2>
-          <p>
+        <section class="section-container">
+          <h2 class="section-heading">Introduction</h2>
+          <p class="section-copy">
             Labrador Retrievers have consistently been one of the most popular
             family pets both in the UK and elsewhere in the world for decades
             thanks to trustworthy and proven natures. Labs are gentle, yet
@@ -45,7 +49,7 @@
             owners in the field.
           </p>
 
-          <p>
+          <p class="section-copy">
             Originally bred to retrieve nets for fishermen and then game and
             fowl for hunters, the Labrador Retriever excels when asked to work
             in difficult and challenging terrains. They are more especially
@@ -58,14 +62,108 @@
           </p>
         </section>
 
-        <section>
-          <h2>Interesting facts about the breed</h2>
-          <ul>
-            <li>
+        <section class="section-container">
+          <table class="info-table">
+            <thead>
+              <tr>
+                <th colspan="2">Breed Highlights</th>
+              </tr>
+            </thead>
+            <tr>
+              <th class="info-table__th">Positives</th>
+              <th class="info-table__th">Negatives</th>
+            </tr>
+            <tr>
+              <td class="info-table__td">
+                Reliable, trustworthy, the breed is well proven
+              </td>
+              <td class="info-table__td">
+                Labs need a ton of mental stimulation and daily exercise
+              </td>
+            </tr>
+            <tr>
+              <td class="info-table__td">
+                Labs make wonderful family pets and have an affinity with
+                children
+              </td>
+              <td class="info-table__td">
+                They shed copiously throughout the year with yellow Labs
+                shedding more than black Labs
+              </td>
+            </tr>
+            <tr>
+              <td class="info-table__td">Good natured and dependable</td>
+              <td class="info-table__td">
+                Labs can be overly enthusiastic and bouncy especially when young
+              </td>
+            </tr>
+            <tr>
+              <td class="info-table__td">
+                Great around other dogs and animals because Labs are social by
+                nature
+              </td>
+              <td class="info-table__td">
+                They tend to be a little "mouthy" which needs to be gently
+                curbed when young
+              </td>
+            </tr>
+            <tr>
+              <td class="info-table__td">
+                Always eager to please which makes Labs relatively easy to train
+              </td>
+              <td class="info-table__td">Puppies can be naughty</td>
+            </tr>
+          </table>
+        </section>
+
+        <section class="section-container">
+          <h2 class="section-heading">History</h2>
+          <p class="section-copy">
+            The Labrador Retriever, as the name suggests, was originally bred
+            for a specific purpose which was to retrieve nets for fishermen and
+            the fact they have webbed paws makes them extremely strong and able
+            swimmers. The breed was later used to retrieve game when birds were
+            flushed out and shot by hunters which often took place in
+            challenging environments which included watery marshlands.
+          </p>
+          <p class="section-copy">
+            The breed originates from the coastal regions of Newfoundland and is
+            thought to have been created by crossing St John's Water Dogs with
+            other smaller breeds of water dogs and possibly Mastiffs, a breed
+            introduced to the country by Portuguese fishermen in the 16th and
+            17th centuries. The St John's Water dog is also an ancestor of the
+            Newfoundland, a dog that is closely related to the Labrador with the
+            Lab being the smaller of the two dogs and having shorter coats
+            whereas the Newfoundland is the larger dog and one that was used to
+            haul carts back in the day.
+          </p>
+          <p class="section-copy">
+            Labradors were first introduced into the UK in the late 1800's by
+            the Earl of Malmsbury and Col Peter Hawker. Both men developed a
+            keen interest in the breed and arranged for a selection of dogs to
+            be imported to the UK. Many Chocolate Labradors are decendants of a
+            Labrador Retriever called Buccleuch Avon, a dog that was gifted to
+            the Duke of Buccleuch in Scotland in 1890 by the Duke of Malmsbury.
+            Another dog called Malmesbury Tramp owned by Countess Howe, is among
+            the main ancestors of the modern Labrador Retrievers we see today.
+          </p>
+          <p class="section-copy">
+            Breed numbers fell in Newfoundland for a combination of reasons, but
+            thanks to the efforts of the first and second Earls of Malmesbury
+            who, through their careful breeding programmes, continued to develop
+            and improve the breed in the UK where they were to become some of
+            the most highly prized as gundogs in the field.
+          </p>
+        </section>
+
+        <section class="section-container">
+          <h2 class="section-heading">Interesting facts about the breed</h2>
+          <ul class="section-copy__list">
+            <li class="section-copy__list-item">
               Are Labrador Retrievers a vulnerable breed? No, they are among the
               most popular both in the UK and in other countries of the world
             </li>
-            <li>
+            <li class="section-copy__list-item">
               There is some thought that Labrador Retrievers might have been
               called St. John's dogs or they may have been called Lesser
               Newfoundlands. Other people think the breed was named after the
@@ -74,116 +172,29 @@
               village in Portugal called Castro Laboreiro where herding dogs are
               very similar looking to Labrador Retrievers too
             </li>
-            <li>
+            <li class="section-copy__list-item">
               Liver and golden Labs were known to exist way back in 1807 when
               they were referred to a chocolate or butterscotch-yellow coloured
               dogs
             </li>
-            <li>
+            <li class="section-copy__list-item">
               The first yellow Labrador to have been recognised was a dog named
               Ben of Hyde
             </li>
-            <li>
+            <li class="section-copy__list-item">
               Chocolate Labs became popular in the thirties
             </li>
-            <li>
+            <li class="section-copy__list-item">
               Gold and fox red Labradors were bred to reestablish the colours by
               breeders in England using Balrion King Frost and his grandson
               Wynfaul Tabasco, a dog responsible for being the biggest influence
               in re-establishing the colour fox red in the breed
             </li>
-            <li>
+            <li class="section-copy__list-item">
               All chocolate Labradors can trace their origins to eight
               bloodlines
             </li>
           </ul>
-        </section>
-
-        <section>
-          <table>
-            <thead>
-              <tr>
-                <th colspan="2">Breed Highlights</th>
-              </tr>
-            </thead>
-            <tr>
-              <th>Positives</th>
-              <th>Negatives</th>
-            </tr>
-            <tr>
-              <td>Reliable, trustworthy, the breed is well proven</td>
-              <td>Labs need a ton of mental stimulation and daily exercise</td>
-            </tr>
-            <tr>
-              <td>
-                Labs make wonderful family pets and have an affinity with
-                children
-              </td>
-              <td>
-                They shed copiously throughout the year with yellow Labs
-                shedding more than black Labs
-              </td>
-            </tr>
-            <tr>
-              <td>Good natured and dependable</td>
-              <td>
-                Labs can be overly enthusiastic and bouncy especially when young
-              </td>
-            </tr>
-            <tr>
-              <td>
-                Great around other dogs and animals because Labs are social by
-                nature
-              </td>
-              <td>
-                They tend to be a little "mouthy" which needs to be gently
-                curbed when young
-              </td>
-            </tr>
-            <tr>
-              <td>
-                Always eager to please which makes Labs relatively easy to train
-              </td>
-              <td>Puppies can be naughty</td>
-            </tr>
-          </table>
-        </section>
-
-        <section>
-          <h2>Send us a message</h2>
-          <form action="/form-submit" method="get" accept-charset="utf-8">
-            <div>
-              <label for="name">Name:</label>
-              <input type="text" name="name" id="name" />
-            </div>
-            <div>
-              <label for="gender">Customer Type:</label>
-              <select name="gender">
-                <option value="optionone">Business</option>
-                <option value="optiontwo">Retail</option>
-                <option value="optionthree">Commercial</option>
-                <option value="optionthree">Other</option>
-              </select>
-            </div>
-            <div>
-              <label for="email">Email:</label>
-              <input type="email" name="email" id="email" />
-            </div>
-            <div>
-              <label for="msg">Message:</label>
-              <textarea
-                id="msg"
-                name="user_message"
-                rows="5"
-                cols="30"
-              ></textarea>
-            </div>
-
-            <div>
-              <button type="reset">Reset</button>
-              <button type="submit">Sign Up</button>
-            </div>
-          </form>
         </section>
       </article>
     </main>
