Update to initial document

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-
 Home
-About Us          
-Contact          
+About Us
+Contact
 List of dogs
 Dog quiz
 Dog of the day
@@ -16,6 +15,7 @@ outgoing and always eager to please which in short makes them highly
 trainable. Being so intelligent, the Labrador Retriever thrives just
 as well in a home environment as they do working alongside their
 owners in the field.
+
 Originally bred to retrieve nets for fishermen and then game and
 fowl for hunters, the Labrador Retriever excels when asked to work
 in difficult and challenging terrains. They are more especially
@@ -26,12 +26,79 @@ includes working as Guide and Assistant Dogs. For decades, the
 Labrador Retriever has consistently been at the top of the list as a
 preferred companion and family pet throughout the world.
 
-Interesting facts about the breed
+Breed Highlights
 
+Positives
+Negatives
+
+Reliable, trustworthy, the breed is well proven
+
+Labs need a ton of mental stimulation and daily exercise
+
+
+Labs make wonderful family pets and have an affinity with
+children
+
+
+They shed copiously throughout the year with yellow Labs
+shedding more than black Labs
+
+Good natured and dependable
+
+
+Labs can be overly enthusiastic and bouncy especially when young
+
+
+Great around other dogs and animals because Labs are social by
+nature
+
+
+They tend to be a little "mouthy" which needs to be gently
+curbed when young
+
+
+Always eager to please which makes Labs relatively easy to train
+
+Puppies can be naughty
+
+History
+
+The Labrador Retriever, as the name suggests, was originally bred
+for a specific purpose which was to retrieve nets for fishermen and
+the fact they have webbed paws makes them extremely strong and able
+swimmers. The breed was later used to retrieve game when birds were
+flushed out and shot by hunters which often took place in
+challenging environments which included watery marshlands.
+
+The breed originates from the coastal regions of Newfoundland and is
+thought to have been created by crossing St John's Water Dogs with
+other smaller breeds of water dogs and possibly Mastiffs, a breed
+introduced to the country by Portuguese fishermen in the 16th and
+17th centuries. The St John's Water dog is also an ancestor of the
+Newfoundland, a dog that is closely related to the Labrador with the
+Lab being the smaller of the two dogs and having shorter coats
+whereas the Newfoundland is the larger dog and one that was used to
+haul carts back in the day.
+
+Labradors were first introduced into the UK in the late 1800's by
+the Earl of Malmsbury and Col Peter Hawker. Both men developed a
+keen interest in the breed and arranged for a selection of dogs to
+be imported to the UK. Many Chocolate Labradors are decendants of a
+Labrador Retriever called Buccleuch Avon, a dog that was gifted to
+the Duke of Buccleuch in Scotland in 1890 by the Duke of Malmsbury.
+Another dog called Malmesbury Tramp owned by Countess Howe, is among
+the main ancestors of the modern Labrador Retrievers we see today.
+
+Breed numbers fell in Newfoundland for a combination of reasons, but
+thanks to the efforts of the first and second Earls of Malmesbury
+who, through their careful breeding programmes, continued to develop
+and improve the breed in the UK where they were to become some of
+the most highly prized as gundogs in the field.
+
+Interesting facts about the breed
 
 Are Labrador Retrievers a vulnerable breed? No, they are among the
 most popular both in the UK and in other countries of the world
-
 
 There is some thought that Labrador Retrievers might have been
 called St. John's dogs or they may have been called Lesser
@@ -41,59 +108,19 @@ which when translated means rural/agricultural workers. There is a
 village in Portugal called Castro Laboreiro where herding dogs are
 very similar looking to Labrador Retrievers too
 
-
 Liver and golden Labs were known to exist way back in 1807 when
 they were referred to a chocolate or butterscotch-yellow coloured
 dogs
 
-
 The first yellow Labrador to have been recognised was a dog named
 Ben of Hyde
 
-
 Chocolate Labs became popular in the thirties
-
 
 Gold and fox red Labradors were bred to reestablish the colours by
 breeders in England using Balrion King Frost and his grandson
 Wynfaul Tabasco, a dog responsible for being the biggest influence
 in re-establishing the colour fox red in the breed
 
-
 All chocolate Labradors can trace their origins to eight
 bloodlines
-
-
-Breed Highlights
-Positives
-Negatives
-
-Reliable, trustworthy, the breed is well proven
-Labs need a ton of mental stimulation and daily exercise
-Labs make wonderful family pets and have an affinity with
-children
-They shed copiously throughout the year with yellow Labs
-shedding more than black Labs
-Good natured and dependable
-
-Labs can be overly enthusiastic and bouncy especially when young
-
-Great around other dogs and animals because Labs are social by
-nature
-
-They tend to be a little "mouthy" which needs to be gently
-curbed when young
-Always eager to please which makes Labs relatively easy to train
-Puppies can be naughty
-Send us a message
-Name:
-Customer Type:
-Business
-Retail
-Commercial
-Other
-Email:
-Message:
-Reset
-Sign Up
-
