--- a/index.html
+++ b/index.html
@@ -3,29 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <title>Dogs</title>
-    <link rel="stylesheet" href="grid-queries.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
       <nav>
         <ul>
           <li>
-            <a href="/">Home</a>
+            <a href="/"">Home</a>
           </li>
           <li>
-            <a href="/about-us">About Us</a>
+            <a href="/about-us"">About Us</a>
           </li>
           <li>
-            <a href="/contact">Contact</a>
+            <a href="/contact"">Contact</a>
           </li>
           <li>
-            <a href="/breed-list">List of dogs</a>
+            <a href="/breed-list""
+              >List of dogs</a
+            >
           </li>
           <li>
-            <a href="/quiz">Dog quiz</a>
+            <a href="/quiz"">Dog quiz</a>
           </li>
           <li>
-            <a href="/dog-of-day">Dog of the day</a>
+            <a href="/dog-of-day""
+              >Dog of the day</a
+            >
           </li>
         </ul>
       </nav>
@@ -55,6 +59,100 @@
             includes working as Guide and Assistant Dogs. For decades, the
             Labrador Retriever has consistently been at the top of the list as a
             preferred companion and family pet throughout the world.
+          </p>
+        </section>
+
+        <section>
+          <table>
+            <thead>
+              <tr>
+                <th colspan="2">Breed Highlights</th>
+              </tr>
+            </thead>
+            <tr>
+              <th>Positives</th>
+              <th>Negatives</th>
+            </tr>
+            <tr>
+              <td>
+                Reliable, trustworthy, the breed is well proven
+              </td>
+              <td>
+                Labs need a ton of mental stimulation and daily exercise
+              </td>
+            </tr>
+            <tr>
+              <td>
+                Labs make wonderful family pets and have an affinity with
+                children
+              </td>
+              <td>
+                They shed copiously throughout the year with yellow Labs
+                shedding more than black Labs
+              </td>
+            </tr>
+            <tr>
+              <td>Good natured and dependable</td>
+              <td>
+                Labs can be overly enthusiastic and bouncy especially when young
+              </td>
+            </tr>
+            <tr>
+              <td>
+                Great around other dogs and animals because Labs are social by
+                nature
+              </td>
+              <td>
+                They tend to be a little "mouthy" which needs to be gently
+                curbed when young
+              </td>
+            </tr>
+            <tr>
+              <td>
+                Always eager to please which makes Labs relatively easy to train
+              </td>
+              <td>Puppies can be naughty</td>
+            </tr>
+          </table>
+        </section>
+
+        <section>
+          <h2>History</h2>
+          <p>
+            The Labrador Retriever, as the name suggests, was originally bred
+            for a specific purpose which was to retrieve nets for fishermen and
+            the fact they have webbed paws makes them extremely strong and able
+            swimmers. The breed was later used to retrieve game when birds were
+            flushed out and shot by hunters which often took place in
+            challenging environments which included watery marshlands.
+          </p>
+          <p>
+            The breed originates from the coastal regions of Newfoundland and is
+            thought to have been created by crossing St John's Water Dogs with
+            other smaller breeds of water dogs and possibly Mastiffs, a breed
+            introduced to the country by Portuguese fishermen in the 16th and
+            17th centuries. The St John's Water dog is also an ancestor of the
+            Newfoundland, a dog that is closely related to the Labrador with the
+            Lab being the smaller of the two dogs and having shorter coats
+            whereas the Newfoundland is the larger dog and one that was used to
+            haul carts back in the day.
+          </p>
+          <p>
+            Labradors were first introduced into the UK in the late 1800's by
+            the Earl of Malmsbury and Col Peter Hawker. Both men developed a
+            keen interest in the breed and arranged for a selection of dogs to
+            be imported to the UK. Many Chocolate Labradors are decendants of a
+            Labrador Retriever called Buccleuch Avon, a dog that was gifted to
+            the Duke of Buccleuch in Scotland in 1890 by the Duke of Malmsbury.
+            Another dog called Malmesbury Tramp owned by Countess Howe, is among
+            the main ancestors of the modern Labrador Retrievers we see today.
+          </p>
+          <p>
+            Breed numbers fell in Newfoundland for a combination of reasons, but
+            thanks to the efforts of the first and second Earls of Malmesbury
+            who, through their careful breeding programmes, continued to develop
+            and improve the breed in the UK where they were to become some of
+            the most highly prized as gundogs in the field.
           </p>
         </section>
 
@@ -97,93 +195,6 @@
               bloodlines
             </li>
           </ul>
-        </section>
-
-        <section>
-          <table>
-            <thead>
-              <tr>
-                <th colspan="2">Breed Highlights</th>
-              </tr>
-            </thead>
-            <tr>
-              <th>Positives</th>
-              <th>Negatives</th>
-            </tr>
-            <tr>
-              <td>Reliable, trustworthy, the breed is well proven</td>
-              <td>Labs need a ton of mental stimulation and daily exercise</td>
-            </tr>
-            <tr>
-              <td>
-                Labs make wonderful family pets and have an affinity with
-                children
-              </td>
-              <td>
-                They shed copiously throughout the year with yellow Labs
-                shedding more than black Labs
-              </td>
-            </tr>
-            <tr>
-              <td>Good natured and dependable</td>
-              <td>
-                Labs can be overly enthusiastic and bouncy especially when young
-              </td>
-            </tr>
-            <tr>
-              <td>
-                Great around other dogs and animals because Labs are social by
-                nature
-              </td>
-              <td>
-                They tend to be a little "mouthy" which needs to be gently
-                curbed when young
-              </td>
-            </tr>
-            <tr>
-              <td>
-                Always eager to please which makes Labs relatively easy to train
-              </td>
-              <td>Puppies can be naughty</td>
-            </tr>
-          </table>
-        </section>
-
-        <section>
-          <h2>Send us a message</h2>
-          <form action="/form-submit" method="get" accept-charset="utf-8">
-            <div>
-              <label for="name">Name:</label>
-              <input type="text" name="name" id="name" />
-            </div>
-            <div>
-              <label for="gender">Customer Type:</label>
-              <select name="gender">
-                <option value="optionone">Business</option>
-                <option value="optiontwo">Retail</option>
-                <option value="optionthree">Commercial</option>
-                <option value="optionthree">Other</option>
-              </select>
-            </div>
-            <div>
-              <label for="email">Email:</label>
-              <input type="email" name="email" id="email" />
-            </div>
-            <div>
-              <label for="msg">Message:</label>
-              <textarea
-                id="msg"
-                name="user_message"
-                rows="5"
-                cols="30"
-              ></textarea>
-            </div>
-
-            <div>
-              <button type="reset">Reset</button>
-              <button type="submit">Sign Up</button>
-            </div>
-          </form>
         </section>
       </article>
     </main>
